src/objects/Service_Location__c.object
<CustomObject>
    <description>REFERRALS - Alias/Program/Location for &quot;location working referral&quot; and &quot;anticipated admission location&quot;</description>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityID__c</fullName>
        <label>FacilityID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProgramID__c</fullName>
        <label>ProgramID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Rollup__c</fullName>
        <description>the program for reporting</description>
        <label>Program Rollup</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Value__c</fullName>
        <label>Service Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <label>TIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <description>unique id from source db</description>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Service Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProgramID__c</columns>
        <columns>Program__c</columns>
        <columns>Setting__c</columns>
        <columns>Service_Value__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alias</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>